# Frutibandas

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
.github/workflows/: release.yml  workflow.yml
actions/: build_win.yml
assets/: abandonner_hover.tga  arrow_down_hover.tga  arrow_right.tga  avatar_open.tga  banane.tga  board_bottom.tga  board_dying2.tga  board_dying4.tga  board_dying6.tga  board_dying7.tga  bouche.tga  bouche_hover.tga  bouche_petite.tga  cheveux_decoiffe.tga  cheveux_herisson.tga  cheveux_hover.tga  connexion.tga  connexion_hover.tga  couleur_right.tga  defeat.tga  home.tga  internet_off.tga  internet_on.tga  interruption.tga  interruption_adversaire_deco.tga  interruption_connexion.tga  jouer.tga  jouer_hover.tga  off.tga  ok.tga  ok_hover.tga  orange.tga  orange_big.tga  pseudo.tga  pseudo_input.tga  pseudo_input_hover.tga  quitter.tga  retour_accueil.tga  retour_accueil_hover.tga  sexe_femme.tga  (+5 more)
assets/advertiser/: celerite.tga  celerite_g.tga  celerite_r.tga  charge.tga  charge_g.tga  charge_r.tga  confiscation.tga  confiscation_g.tga  confiscation_r.tga  conversion.tga  conversion_g.tga  conversion_r.tga  desordre.tga  desordre_g.tga  desordre_r.tga  enclume.tga  enclume_g.tga  enclume_r.tga  entracte.tga  entracte_g.tga  entracte_r.tga  petrification.tga  petrification_g.tga  petrification_r.tga  piege.tga  piege_g.tga  piege_r.tga  renfort.tga  renfort_g.tga  renfort_r.tga  solo.tga  solo_g.tga  solo_r.tga  vachette.tga  vachette_g.tga  vachette_r.tga
assets/animation/: banana_flying_l1.tga  banana_flying_l2.tga  banana_flying_l3.tga  banana_flying_l4.tga  banana_flying_l5.tga  banana_flying_r1.tga  banana_flying_r2.tga  banana_flying_r3.tga  banana_flying_r4.tga  banana_flying_r5.tga  orange_flying_l1.tga  orange_flying_l2.tga  orange_flying_l3.tga  orange_flying_l4.tga  orange_flying_l5.tga  orange_flying_r1.tga  orange_flying_r2.tga  orange_flying_r3.tga  orange_flying_r4.tga  orange_flying_r5.tga  vachette1.tga  vachette3.tga  vachette4.tga
assets/avatar/: bouche_grande.tga  bouche_grande_hover.tga  bouche_moyenne.tga  bouche_moyenne_hover.tga  bouche_petite_hover.tga  cheveux.tga  cheveux_arriere.tga  cheveux_arriere_hover.tga  cheveux_au_bol.tga  cheveux_au_bol_hover.tga  cheveux_decoiffe_hover.tga  cheveux_frange.tga  cheveux_frange_hover.tga  cheveux_herisson_hover.tga  cheveux_meche_avant.tga  cheveux_meche_avant_hover.tga  cheveux_mi_long.tga  cheveux_mi_long_hover.tga  cheveux_mixte.tga  cheveux_mixte_hover.tga  cheveux_raide.tga  cheveux_raide_hover.tga  queue_cheval.tga  queue_cheval_hover.tga  sexe.tga  sexe_femme_hover.tga  sexe_homme.tga  sexe_homme_hover.tga  sexe_hover.tga  visage_hover.tga  visage_normal_hover.tga  yeux.tga  yeux_amande.tga  yeux_amande_hover.tga  yeux_egypte.tga  yeux_egypte_hover.tga  yeux_gros.tga  yeux_gros_hover.tga  yeux_hover.tga  yeux_mascara.tga  (+1 more)
assets/cartes/: celerite.tga  celerite_desc.tga  charge.tga  charge_desc.tga  confiscation.tga  confiscation_desc.tga  conversion.tga  conversion_desc.tga  desordre.tga  desordre_desc.tga  enclume.tga  enclume_desc.tga  entracte.tga  entracte_desc.tga  petrification.tga  petrification_desc.tga  piege.tga  piege_desc.tga  renfort.tga  renfort_desc.tga  solo.tga  solo_desc.tga  vachette.tga  vachette_desc.tga  verso.tga
assets/common/: ok.tga  ok_hover.tga
assets/frutibouilleur/: amande.tga  amande_hover.tga  au_bol.tga  bouche_grande.tga  bouche_grande_hover.tga  bouche_moyenne.tga  bouche_moyenne_hover.tga  bouche_petite.tga  bouche_petite_hover.tga  bulb.tga  bulb1.tga  bulb1_hover.tga  bulb2.tga  bulb2_hover.tga  bulb_hover.tga  burlap_sack.tga  burlap_sack_hover.tga  checked_checkbox.tga  colere.tga  colere_hover.tga  couettes.tga  couettes_hover.tga  couleur_left.tga  couleur_left_glow.tga  couleur_right_glow.tga  culbur.tga  culbur_hover.tga  decoiffe.tga  decoiffe_hover.tga  egypte.tga  egypte_hover.tga  elvis.tga  elvis_hover.tga  epi1.tga  epi1_hover.tga  epi2.tga  epi2_hover.tga  epi3.tga  epi3_hover.tga  eyes.tga  (+71 more)
assets/game_page/: anvil.tga  arrow_down.tga  arrow_down_hover.tga  arrow_left.tga  arrow_left_hover.tga  arrow_right.tga  arrow_right_hover.tga  arrow_up.tga  arrow_up_hover.tga  banane_big.tga  board.tga  chat_input.tga  chat_input_hover.tga  defeat.tga  empty.tga  game.tga  give_up.tga  give_up_hover.tga  orange.tga  sound.tga  sound_ctrl.tga  sound_hover.tga  sound_lvl.tga  victory.tga
assets/home_page/: abandonner.tga  connection_server_lost.tga  connexion.tga  connexion_hover.tga  home.tga  internet.tga  internet_on.tga  off_glow.tga  ok.tga  ok_hover.tga  opponent_disconnected.tga  opponent_gave_up.tga  play.tga  play_hover.tga  pseudo.tga  pseudo_hover.tga  stop_search_hover.tga
assets/mouse/: hover.tga  normal.tga  viseur.tga
include/: advertiser.hpp  anvil.hpp  audio.hpp  avatar.hpp  bandas.hpp  camera.hpp  card.hpp  communication.hpp  cow.hpp  editorUI.hpp  game.hpp  gl_debug.hpp  graphics.hpp  helpers.hpp  logic.hpp  mesh.hpp  mouse.hpp  music.hpp  network_client.hpp  scene.hpp  shader_light.hpp  timer.hpp  tinyfiledialogs.hpp  user_interface.hpp  window.hpp  writer.hpp
net_config/: net_config.json
shaders/AO/: fragment.glsl
shaders/GBuffer/: fragment.glsl  vertex.glsl
shaders/PBR/: fragment.glsl  vertex.glsl
shaders/UI/: fragment.glsl  vertex.glsl
shaders/advertiser/: fragment.glsl  vertex.glsl
shaders/avatar/: fragment.glsl
shaders/axis/: fragment.glsl  vertex.glsl
shaders/bilateralBlur/: fragment.glsl  vertex.glsl
shaders/blinn_phong/: fragment.glsl  vertex.glsl
shaders/compute/: gaussian_blur.glsl  horizontal_mirror.glsl
shaders/cursor/: fragment.glsl  vertex.glsl
shaders/downSampling/: fragment.glsl
shaders/final/: fragment.glsl
shaders/gaussianBlur/: fragment.glsl
src/: .bandas.cpp.swp  audio.cpp  bandas.cpp  camera.cpp  game.cpp  gl_debug.cpp  graphics.cpp  helpers.cpp  logic.cpp  main.cpp  mesh.cpp  mouse.cpp  network_client.cpp  scene.cpp  shader_light.cpp  tinyfiledialogs.cpp  user_interface.cpp  window.cpp  writer.cpp
(+728 files in other folders)
